...
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<resources>
    <string name="mozilla" translatable="false">Mozilla</string>
    <string name="firefox" translatable="false">Firefox</string>
    <string name="mpl" translatable="false">Mozilla Public License</string>
    <!-- Label used for buttons, e.g. in dialogs -->
    <string name="action_cancel">CANCEL</string>
    <!-- Label used for buttons, e.g. in dialogs -->
    <string name="action_ok">OK</string>

    <!-- This text is shown in the URL bar when it's empty -->
    <string name="urlbar_hint">Search or enter address</string>
    <!-- If the user has a URL copied in his/her clipboard, the search bar will offer a button for users to visit the website by a single tap. -->
...
    <!-- Setting data saving path dialog -->
    <string name="setting_dialog_sd_card">SD card</string>
    <string name="setting_dialog_internal_storage">Internal storage</string>

    <!--BrowsingHistoryActivity-->
    <string name="browsing_history_clear_btn">CLEAR BROWSING HISTORY</string>
    <string name="browsing_history_empty_view_msg">No browsing history</string>
    <string name="browsing_history_date_today">Today</string>
    <string name="browsing_history_date_yesterday">Yesterday</string>
    <string name="browsing_history_menu_delete">Delete</string>
    <string name="browsing_history_dialog_confirm_clear_message">Clear all browsing history?</string>
    <string name="browsing_history_dialog_btn_clear">Clear</string>

    <!-- Remove the item from Download file panel -->
    <string name="remove_from_list">Remove from list</string>

    <!-- Remove the item from Download file panel and delete the file -->
    <string name="delete_file">Delete file</string>
...
