...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/browsing_history_btn_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@drawable/bg_clear_history_button"
            android:gravity="center"
            android:text="@string/browsing_history_clear_btn"
...
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="18dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/browsing_history_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:nestedScrollingEnabled="false" />
    </LinearLayout>
    <RelativeLayout
...
