...
                style="@style/MenuButtonText"
                android:text="@string/label_menu_download" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/menu_history"
        style="@style/MenuButtonContainer">

        <LinearLayout style="@style/MenuButtonGroup">

            <View
                style="@style/MenuButtonIcon"
...
